<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8FDCF"
    tools:context=".ProjectActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/carter_one"
                android:gravity="center"
                android:padding="10dp"
                android:text="Widgets"
                android:textAllCaps="true"
                android:textSize="30sp" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/checkboxbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:fontFamily="@font/baloo"
                android:text="@string/checkboxUnderline" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/datepicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:fontFamily="@font/baloo"
                android:text="@string/DatePicker" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/timepicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:fontFamily="@font/baloo"
                android:text="@string/TimePicker" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/radiobox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:fontFamily="@font/baloo"
                android:text="@string/RadioBox" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:fontFamily="@font/baloo"
                android:text="@string/Spinner" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/togglebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:fontFamily="@font/baloo"
                android:text="@string/Toggle" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/switchbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:fontFamily="@font/baloo"
                android:text="@string/Switch" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:fontFamily="@font/baloo"
                android:text="@string/checkboxUnderline" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/k"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:fontFamily="@font/baloo"
                android:text="@string/checkboxUnderline" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:fontFamily="@font/baloo"
                android:text="@string/checkboxUnderline" />

        </RelativeLayout>


    </LinearLayout>

</ScrollView>